Add Rates API
